--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^8.4.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
-    "pdfkit": "^0.15.0"
+    "pdfkit": "^0.15.0",
+    "vercel": "^34.2.3"
   },
   "description": ""
 }
